[package]
name = "cpu_affinity"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.19.11"

[lib]
crate-type = ["cdylib"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
]
